--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.5
 Pillow==2.4.0
 South==0.8.4
 argparse==1.2.1
+boto==2.29.0
 dj-database-url==0.3.0
 dj-static==0.0.5
 django-classy-tags==0.5.1
@@ -9,6 +10,7 @@ django-cms==3.0.2
 django-mptt==0.6.1
 django-reversion==1.8.0
 django-sekizai==0.7
+django-storages==1.1.8
 django-toolbelt==0.0.1
 djangocms-admin-style==0.2.2
 djangocms-column==1.3
